# ai-ml-journey

./: README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
artifacts/: calibration_metrics_20250907_145119.csv  classification_report_20250907_145119.txt  confusion_matrix_20250907_145119.csv  cv_summary_20250907_145119.csv  cv_summary_20250907_145119.json  grid_best_20250907_145119.json  model_logreg_pipeline_20250907_145119.joblib  model_logreg_pipeline_cal_isotonic_20250907_145119.joblib  model_logreg_pipeline_cal_platt_20250907_145119.joblib  reliability_points_isotonic_20250907_145119.csv  reliability_points_platt_20250907_145119.csv  reliability_points_uncal_20250907_145119.csv  submission_calibrated.csv  submission_logreg.csv
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb
