[project]
name = "ai-ml-journey"
version = "0.1.0"
description = 'AI/ML Journey'
authors = [
    { name = "Delang"}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^0.24.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
jupyter = "^1.0.0"
tensorflow = "^2.5.0"